data/derived/fa15/progs/unify/prog3481.ml.out
Characters 62-74:
  |_-> bigAdd ((mulByDigit i-1 l) l);;
                ^^^^^^^^^^^^
Error: This expression has type 'a -> 'b list
       but an expression was expected of type int
